[package]
name = "docking"
version = "0.1.0"
edition = "2024"

[dependencies]
egui_deferred_table = { path = "../.." }
shared = { path = "../shared" }

egui = { version = "0.33.0" }
eframe = { version = "0.33.0"}
egui_dock = "0.18.0"

# time/date
chrono = "0.4.41"

# data types
rust_decimal = "1.37"
rust_decimal_macros = "1.37"

# logging
env_logger = "0.11.8"
log = "0.4.27"

[features]
default-feautures = ["persistence"]

# enable preservation of state between restarts, e.g. user-adjusted column widths.
persistence = [
    "egui_deferred_table/persistence"
]


