[package]
name = "scrolltest"
version = "0.1.0"
edition = "2024"

[dependencies]
egui_deferred_table = { path = "../.." }

egui = { version = "0.32.1" }
eframe = { version = "0.32.1"}

# data types
rust_decimal = "1.37"
rust_decimal_macros = "1.37"

# data storage
indexmap = "2.10.0"

# data generation
fastrand = "2"
names = { version = "0.14", default-features = false }

# logging
env_logger = "0.11.8"
log = "0.4.27"

