[package]
name = "shared"
version = "0.1.0"
edition = "2024"

[dependencies]
egui_deferred_table = { path = "../.." }

egui = "0.32.1"

# time/date
chrono = "0.4.41"

# data types
rust_decimal = "1.37"
rust_decimal_macros = "1.37"

# data storage
indexmap = "2.10.0"

# data generation
fastrand = "2"
names = { version = "0.14", default-features = false }

# logging
log = "0.4.27"

[dev-dependencies]
rstest = "0.26.1"
